--- a/css/main.css
+++ b/css/main.css
@@ -68,3 +68,15 @@ footer {
 ::-webkit-scrollbar-corner {
     background: transparent;
 }
+
+@media screen and (max-width: 1090px) {
+    section {
+        padding: 3rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section {
+        padding: 2rem;
+    }
+}
