--- a/css/sections/home.css
+++ b/css/sections/home.css
@@ -25,7 +25,7 @@
 }
 
 #home h1 {
-    font-size: 4rem;
+    font-size: 3vw;
     font-family: "flegrei", sans-serif;
     font-weight: 600;
     font-style: normal;
@@ -33,7 +33,7 @@
 }
 
 #home h2 {
-    font-size: 2rem;
+    font-size: 1.8vw;
     font-family: "century-gothic", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
@@ -55,7 +55,7 @@
 
 .borderbottom {
     border-bottom: 5px solid #fff;
-    width: 620px;
+    width: fit-content;
     padding-bottom: 1rem;
 }
 
@@ -168,5 +168,50 @@
     }
     100% {
         transform: translate(0);
+    }
+}
+
+/* Variables with media queries */
+@media screen and (max-width: 1090px) {
+    #home h1 {
+        font-size: 5vw;
+    }
+
+    #home h2 {
+        font-size: 3vw;
+    }
+
+    #home h2 .mixta {
+        font-size: 3vw;
+    }
+
+    #home h2 .orange {
+        font-size: 3vw;
+    }
+
+    #home h2 a {
+        font-size: 3vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #home h1 {
+        font-size: 5.5vw;
+    }
+
+    #home h2 {
+        font-size: 3.5vw;
+    }
+
+    #home h2 .mixta {
+        font-size: 5vw;
+    }
+
+    #home h2 .orange {
+        font-size: 5vw;
+    }
+
+    #home h2 a {
+        font-size: 5vw;
     }
 }
