--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -158,3 +158,79 @@
         margin-right: 5px; /* Espacement entre l'icône et le texte */
     }
 }
+
+@media screen and (max-width: 768px){
+    #about-me .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-content {
+        flex-direction: column;
+    }
+
+    .about-left {
+        margin-left: 0;
+        margin-top: 20px;
+        img {
+            width: 100%;
+        }
+    }
+
+    .about-right {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .about-right h2 {
+        font-size: 1.5rem;
+    }
+
+    .about-right p {
+        font-size: 1rem;
+    }
+
+    .cta-div {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cta-div .cta {
+        width: 100%;
+    }
+    .cta-div .cta:last-child {
+        margin-bottom: 15px;
+    }
+
+    .content-text {
+        margin-top: 20px;
+        width: 100%;
+        color: #000;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content-text ul.about-list {
+        list-style: none; /* Supprime les puces classiques */
+        padding: 0;
+    }
+
+    .content-text ul.about-list li {
+        margin-bottom: 10px; /* Espacement entre les éléments */
+        font-size: 1.1em; /* Taille de police légèrement plus grande */
+    }
+
+    .content-text ul.about-list li i {
+        color: #4CAF50; /* Couleur des icônes */
+        margin-right: 5px; /* Espacement entre l'icône et le texte */
+    }
+}
