--- a/css/sections/skills.css
+++ b/css/sections/skills.css
@@ -51,8 +51,18 @@
     font-family: var(--font-secondary);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
+    #skills {
+        height: fit-content;
+    }
     #skills div#skills-container {
         grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+    #skills div#skills-container {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
